syntax = "proto3";

package cline;

import "cline/common.proto";

option go_package = "github.com/cline/grpc-go/cline";
option java_multiple_files = true;
option java_package = "bot.cline.proto";

// Service for architecture diagram operations
service ArchitectureService {
  // Generate architecture diagram from workspace analysis
  rpc generateArchitectureDiagram(GenerateArchitectureDiagramRequest) returns (String);

  // Load a saved cluster graph by ID
  rpc loadArchitectureDiagram(StringRequest) returns (ArchitectureDiagramData);

  // List all saved architecture diagrams for current workspace
  rpc listArchitectureDiagrams(EmptyRequest) returns (ArchitectureDiagramList);

  // Delete an architecture diagram
  rpc deleteArchitectureDiagram(StringRequest) returns (Empty);

  // Get cached inventory if available
  rpc getCachedInventory(EmptyRequest) returns (InventoryData);

  // Invalidate inventory cache (force re-analysis on next generation)
  rpc invalidateInventoryCache(EmptyRequest) returns (Empty);
}

// Request for generating architecture diagram
message GenerateArchitectureDiagramRequest {
  Metadata metadata = 1;
  string workspace_path = 2; // Optional: defaults to cwd
  string clustering_hint = 3; // Optional: user guidance for LLM clustering
  bool use_cache = 4; // Use cached inventory if available
}

// Architecture diagram data with cluster graph and inventory
message ArchitectureDiagramData {
  string id = 1;
  string cluster_graph_json = 2; // ClusterGraph as JSON
  string inventory_json = 3; // RepoInventory as JSON (for context)
  int64 created_at = 4;
  int32 cluster_count = 5;
  int32 file_count = 6;
}

// List of architecture diagrams
message ArchitectureDiagramList {
  repeated ArchitectureDiagramInfo diagrams = 1;
}

// Architecture diagram summary information
message ArchitectureDiagramInfo {
  string id = 1;
  int64 created_at = 2;
  int32 cluster_count = 3;
  int32 file_count = 4;
}

// Cached inventory data
message InventoryData {
  string inventory_json = 1; // RepoInventory as JSON
  int64 cached_at = 2;
  int32 file_count = 3;
  int32 total_loc = 4;
}
